--- a/angular.json
+++ b/angular.json
@@ -40,9 +40,9 @@
                   "maximumError": "1MB"
                 },
                 {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kB",
-                  "maximumError": "4kB"
+                  "type": "anyComponentStyle"
+                  
+
                 }
               ],
               "outputHashing": "all"
